adjustments for 1.16.5 and Java 8